bug: Fix gap under footer

--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,10 @@ body {
     position: relative;
 }
 
+p {
+    margin-bottom: 0;
+}
+
 .block-divider {
     width: 200px;
 }
@@ -195,6 +199,10 @@ body {
     margin-top: 0;
 }
 
+.info-header p {
+    margin-bottom: 15px;
+}
+
 .socials {
     text-decoration: none;
     color: #bebbbb;
@@ -236,8 +244,9 @@ footer {
     margin-top: auto;
     width: 100%;
     height: 75px;
-    position:absolute;
-    bottom:0;
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 0;
 }
 
 .contact a {
